# slurm_waveform_generation

./: .gitignore  README.md  pyproject.toml
src/slurm_waveform_generation/: make_slurm_job.py  make_waveforms.py  merge_waveform_h5s.py
src/slurm_waveform_generation/slurm_job_generator/: __init__.py  file_generators.py  slurm_job_generator.py  slurm_utils.py
